# bake

./: .gitignore  Makefile.am  README.md  configure.ac  sloc.sh
include/: bake-bulk-client.h  bake-bulk-server.h  bake-bulk.h  bake-client.h  bake-client.hpp  bake-server.h  bake-server.hpp  bake.h  bake.hpp
maint/: bake-bulk-client.pc.in  bake-bulk-server.pc.in  bake-bulk.pc.in  bake-client.pc.in  bake-server.pc.in
maint/hooks/: pre-commit
src/: Makefile.subdir  bake-backend.h  bake-benchmark.cc  bake-bulk-client.c  bake-bulk-mkpool.c  bake-bulk-rpc.c  bake-bulk-rpc.h  bake-bulk-server-daemon.c  bake-bulk-server.c  bake-bulk.c  bake-client.c  bake-copy-from.c  bake-copy-to.c  bake-file-backend.c  bake-latency-bench.c  bake-mkpool.c  bake-pmem-backend.c  bake-provider.h  bake-rpc.h  bake-server-daemon.c  bake-server.c  bake-shutdown.c  bake-timing.h  bb-copy-from.c  bb-copy-to.c  bb-latency-bench.c  bb-shutdown.c  benchmark.json  uthash.h  util.c
src/base64/: README  b64.h  decode.c  encode.c
tests/: Makefile.subdir  basic-file.sh  basic.sh  copy-to-and-from-file.sh  copy-to-and-from-multi-providers-file.sh  copy-to-and-from-multi-providers.sh  copy-to-and-from-multi-targets-file.sh  copy-to-and-from-multi-targets.sh  copy-to-and-from.sh  copy-to.sh  create-write-persist-file.sh  create-write-persist-remove-file.sh  create-write-persist-remove-test.c  create-write-persist-remove.sh  create-write-persist-test.c  create-write-persist.sh  lorem.txt  test-util.sh
tests/proxy/: Makefile.subdir  bb-proxy-rpc.h  bb-proxy-server-daemon.c  bb-proxy-test.c  proxy-create-write-persist-read.sh  proxy-rpc.h  proxy-server-daemon.c  proxy-test-util.sh  proxy-test.c  proxy-write-read.sh
